--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,12 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run:
+          name: Get dependencies and install
+          command: go get -v -t -d ./...
+      - run:
+          name: Run tests and coverage
+          command: go test -race -coverprofile=coverage.txt -covermode=atomic
+      - run:
+          name: Upload coverage to Codecov
+          command: bash <(curl -s https://codecov.io/bash)
